@@ -1,3 +1,8 @@
+2003-05-03  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/9364, c++/10553, c++/10586
+	* decl.c (make_typename_type): Don't crash on illegal code.
+
 2003-05-03  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* class.c (finish_struct): Use location_t and input_location
